--- a/commerce/auctions/templates/auctions/listing_page.html
+++ b/commerce/auctions/templates/auctions/listing_page.html
@@ -22,7 +22,7 @@
             <form action="{% url 'bidding_adding_watchlist' listing_id=listing.id %}" method="POST">
                 {% csrf_token %}
                 <label for="bid">Starting bid: <strong>US ${{listing.starting_bid}}</strong></label><br>
-                {{bid_count}} bid(s) so far.<br>
+                {{bid_count}} bid(s) so far. {{current_bidder}}<br>
                 <input type="number" name="bid" id="bid" 
                     min="{{bidding_price}}" max="999999" step="0.01" 
                     value="{{bidding_price}}" placeholder="Bid">
